@@ -1,3 +1,7 @@
+2004-03-10  Volker Kuhlmann  <VolkerKuhlmann@gmx.de>
+
+	* signal/sinewave.m: Allow N to default to M.
+
 2004-03-09  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* signal/unwrap.m: Use "isempty (tol)" instead of "tol == []".
